--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,13 @@ a:visited {
 	color: unset;
 }
 
+button {
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: transparent;
+}
+
 body {
 	min-height: 100vh;
 	background-image: radial-gradient(#1f3756, #141539);
 	color: white;
-	margin-top: 2rem;
 }
