--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,20 @@ button {
 
 body {
 	min-height: 100vh;
+	background-size: 150% 150%;
 	background-image: radial-gradient(#1f3756, #141539);
 	color: white;
+	animation: AnimateBG 3s ease infinite;
+}
+
+@keyframes AnimateBG {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
