--- a/src/components/game.css
+++ b/src/components/game.css
@@ -8,6 +8,7 @@
 	height: 282px;
 	/* border: 1px solid rgb(245, 243, 243); */
 	margin: 0 auto;
+	margin-top: 6rem;
 	position: relative;
 	background-image: url("../assets//bg-triangle.svg");
 	background-position: center;
@@ -155,13 +156,29 @@
 
 .computer-pick-placeholder {
 	position: absolute;
-	top: 8%;
-	left: 62%;
+	top: 4%;
+	left: 65.1%;
 	width: 6.875rem;
 	height: 6.875rem;
 	background-color: #0f182a;
 	border-radius: 50%;
-	/* z-index: -9; */
+
+	box-shadow: 0px 0px 0px 1px #0000001a;
+	animation: pulse-animation 2s infinite ease-in;
+}
+
+@keyframes pulse-animation {
+	0% {
+		transform: scale(1.1);
+		box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+	}
+	50% {
+		transform: scale(1.2);
+	}
+	100% {
+		transform: scale(1.1);
+		box-shadow: 0 0 0 30px rgba(0, 0, 0, 0);
+	}
 }
 
 .computer-pick.rock-card {
@@ -170,6 +187,56 @@
 
 .computer-pick.rock-card:hover {
 	transform: translateX(0%);
+}
+
+/*-----------------------------------*\
+		 GAME RESULT
+/*-----------------------------------*/
+
+.game-result {
+	margin: 0 auto;
+	margin-top: 5.4375rem;
+	width: 100%;
+}
+
+.result-win-lose {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.result-win-lose > p {
+	text-transform: uppercase;
+	color: white;
+	font-size: 30px;
+	font-weight: 700;
+}
+
+.result-button-container {
+	margin: 0 auto;
+	margin-top: 26px;
+	margin-bottom: 51px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.result-button-container > button {
+	text-transform: uppercase;
+	font-size: 18px;
+	font-weight: 500;
+	letter-spacing: 1px;
+	font-family: var(--font);
+	color: #1f3756;
+	width: 100%;
+	max-width: 220px;
+	height: 48px;
+	background-color: white;
+	border: none;
+	border-radius: 8px;
+	outline: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 @media screen and (max-width: 1100px) {
