--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,21 @@
 .app {
 	max-width: 900rem;
 	min-height: 100vh;
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-between; */
 	position: relative;
+}
+
+@media screen and (min-height: 800px) {
+	.app {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+	footer {
+		margin-bottom: 2rem;
+	}
 }
 
 header {
@@ -78,7 +89,9 @@ footer {
 	width: calc(100% - 30px);
 	max-width: 500px;
 	margin: 0 auto;
-	margin-bottom: 51px;
+	margin-bottom: 2rem;
+
+	margin-top: 10em;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
