--- a/src/components/game.css
+++ b/src/components/game.css
@@ -233,7 +233,7 @@
 	justify-content: center;
 }
 
-.result-button-container > button {
+.result-button {
 	text-transform: uppercase;
 	font-size: 21px;
 	font-weight: 600;
@@ -250,6 +250,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	box-shadow: #00000070 3px 3px 10px 0px;
+	transition: all 150ms ease;
+	cursor: pointer;
+}
+
+.result-button:hover {
+	box-shadow: #00000070 3px 4px 10px 4px;
+	transform: translateY(-2px);
 }
 
 @media screen and (max-width: 1100px) {
