--- a/src/components/game.css
+++ b/src/components/game.css
@@ -7,7 +7,7 @@
 	max-width: 337px;
 	height: 282px;
 	margin: 0 auto;
-	margin-top: 6rem;
+	margin-top: 96px;
 	position: relative;
 	background-image: url("../assets//bg-triangle.svg");
 	background-position: center;
@@ -21,7 +21,7 @@
 }
 
 .main-game-transform {
-	transform: translateY(-10%);
+	transform: translateY(-5%);
 }
 
 /*-----------------------------------*\
@@ -251,13 +251,13 @@
 	align-items: center;
 	justify-content: center;
 	box-shadow: #00000070 3px 3px 10px 2px;
-	transition: all 150ms ease;
+	transition: box-shadow 150ms ease, color 150ms ease;
 	cursor: pointer;
 }
 
 .result-button:hover {
-	box-shadow: #00000070 3px 4px 10px 4px;
-	transform: translateY(-3px);
+	box-shadow: #00000070 3px 3px 10px 6px;
+	color: rgb(232 67 101);
 }
 
 @media screen and (max-width: 1100px) {
