--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		min-height: unset;
+		min-height: 99vh;
 		max-height: 100vh;
 	}
 	footer {
