--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root {
 	width: 100%;
-	max-height: 98vh;
 }
 
 /* @media screen and (max-width: 1000px) and (min-height: 720px) {
@@ -11,7 +10,7 @@
 
 .app {
 	max-width: 900rem;
-	min-height: 98vh;
+	min-height: 97vh;
 	position: relative;
 }
 
@@ -93,7 +92,7 @@ footer {
 	width: calc(100% - 30px);
 	max-width: 500px;
 	margin: 0 auto;
-	padding-bottom: 2rem;
+	padding-bottom: 10px;
 	margin-top: 10em;
 	display: flex;
 	align-items: center;
@@ -236,5 +235,10 @@ h2 {
 
 	.score-count {
 		font-size: 64px;
+	}
+
+	footer {
+		margin-top: 11px;
+		padding-bottom: 5px;
 	}
 }
