fix: header component under shadow

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,8 @@ header {
 	margin: 0 auto;
 	padding-right: 0.75rem;
 	padding-left: 1.5625rem;
+	position: relative;
+	z-index: 9;
 }
 
 .game-logo-container {
