--- a/src/components/game.css
+++ b/src/components/game.css
@@ -181,7 +181,7 @@
 	left: 63.1%;
 	width: 6.875rem;
 	height: 6.875rem;
-	background-color: #0f182a;
+	background-color: #0f182ae3;
 	border-radius: 50%;
 	box-shadow: 0px 0px 0px 1px #0000001a;
 	animation: pulse-animation 1.9s infinite ease;
@@ -383,6 +383,28 @@
 		bottom: unset;
 		font-size: 25px;
 		width: 240px;
+	}
+
+	/*  Winner Shadow */
+	.rock-card.winner-shadow {
+		box-shadow: 1px 7px 0px 0px rgb(174 47 68),
+			0px 0px 4px 64px rgb(255 255 255 / 2%),
+			0px 0px 4px 128px rgb(255 255 255 / 2%),
+			0px 0px 4px 192px rgb(255 255 255 / 2%);
+	}
+
+	.paper-card.winner-shadow {
+		box-shadow: rgb(40 63 159) 1px 7px 0px 0px,
+			0px 0px 4px 64px rgb(255 255 255 / 2%),
+			0px 0px 4px 128px rgb(255 255 255 / 2%),
+			0px 0px 4px 192px rgb(255 255 255 / 2%);
+	}
+
+	.scissors-card.winner-shadow {
+		box-shadow: rgb(179 128 27) 1px 7px 0px 0px,
+			0px 0px 4px 64px rgb(255 255 255 / 2%),
+			0px 0px 4px 128px rgb(255 255 255 / 2%),
+			0px 0px 4px 192px rgb(255 255 255 / 2%);
 	}
 
 	.computer-pick-placeholder {
